Updated constructor instancing for >=java 9